--- a/Style/portfolio.css
+++ b/Style/portfolio.css
@@ -186,12 +186,19 @@ footer ul li{
 .cards{
 
     display: flex;
-    
+    justify-content: space-between;
     
 }
 
 .section-3 h3{
     text-align: center;
+}
+
+.info{
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .info img{
@@ -200,6 +207,5 @@ footer ul li{
 
 .info p{
     margin:0;
-    background-color: white;
-    border: 1px solid black;
+    
 }
