--- a/Style/portfolio.css
+++ b/Style/portfolio.css
@@ -27,7 +27,10 @@
   font-optical-sizing: auto;
 
 }
-
+.font-2{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+}
 /* .inter-<uniquifier> {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -38,6 +41,7 @@
 header{
     height: 698px;
     background-image: url(/Assets/Hero-bg.png);
+    
 }
 
 nav {
@@ -277,4 +281,13 @@ footer ul li{
 
 .pt-20{
     padding-top: 20px;
+}
+.section-5{
+    display: flex;
+    justify-content:space-between;
+}
+
+.section-5 h3{
+    font-size: 97px;
+
 }
