--- a/Style/portfolio.css
+++ b/Style/portfolio.css
@@ -132,6 +132,7 @@ main{
 /* footer style  */
 footer{
     text-align: center;
+    background-color: white;
 }
 footer h3{    
     color: #4E47FF;
@@ -270,9 +271,7 @@ footer ul li{
     padding-top: 71px;
     margin: 0;
 }
-.p10{
-    /* padding: 10px; */
-}
+
 
 .img-3{
     border-radius: 48px;
@@ -284,10 +283,33 @@ footer ul li{
 }
 .section-5{
     display: flex;
-    justify-content:space-between;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .section-5 h3{
     font-size: 97px;
+    font-weight: 800;
 
 }
+.section-5 button{
+    padding: 19px 201px;
+    margin-left: 80px;
+    margin-top: 30px;
+}
+
+.section-5 label{
+    font-size: 18px;
+
+}
+input{
+    padding: 20px 379px 20px 32px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 1px solid #D6DDED;
+}
+.input{
+    margin: 0;
+    padding-left: 200px;
+}
+
