--- a/Style/portfolio.css
+++ b/Style/portfolio.css
@@ -274,10 +274,14 @@ footer ul li{
     margin: 0;
 }
 
+.mt20{
+    margin-top: 20px;
+}
+
 
 .img-3{
     border-radius: 48px;
-    /* padding-bottom: 71px; */
+    
 }
 
 .pt-20{
